# moneypal-genesis-layer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
assets/: GICC Logo.avif
backend/: .env.example  Dockerfile  README.md
backend/app/: main.py  prompts.py  registry.py
backend/scripts/: ingest.py  run_backend.sh  run_ingest.sh
backend/tests/: test_db_schema.py  test_dnbs02_report.py
backend/vector_store/: regulatory_chunks.jsonl
docs/: BUILDATHON_PLAN.md  DNBS02-Important Financial Parameters (1) (4) (2).xlsx  DNBS02_REPORT_PLAN.md  QDRANT_SETUP.md  TEAM_A_MACRO.md  TEAM_B_COMPETITIVE.md  TEAM_C_REGULATORY.md  TEAM_ONBOARDING.md
frontend/: .dockerignore  .env.development  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppSidebar.tsx  ChatSidebar.tsx  CompanyReport.tsx  ConditionalHeader.tsx  GeneralChat.tsx  GuideBot.tsx  IntelAssistant.tsx  NavBar.tsx  PWARegister.tsx  ThemeToggle.tsx  WordCloud.tsx  YoutubeChat.tsx
frontend/hooks/: useSSE.ts
frontend/lib/: api.ts  (+4 more)
module1-macro/: README.md  ingest.py  main.py  prompts.py  routes.py
module2-competitive/: README.md  ingest.py  institution_loader.py  main.py  routes.py
module3-regulatory/: README.md  alerts.py  ingest.py  main.py  reg_loader.py  routes.py
nginx/: nginx.conf
scripts/: download_model.py  smoke_test.py
shared/: README.md  download_model.py  rag_helpers.py  schema.py  smoke_test.py
(+118 files in other folders)
